[package]
name = "active-lights"
version = "0.1.0"
authors = ["Peter Klein <me@peterklein.dev>"]
edition = "2018"

[dependencies]
hueclient = "0.4.1"
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug"] }
env_logger = "0.8.3"
sun = "0.2"
chrono = "0.4.19"
