[package]
name = "active-lights"
version = "0.1.0"
authors = ["Peter Klein <me@peterklein.dev>"]
edition = "2018"

[dependencies]
hueclient = "0.4.1"
clap = "3.0.0-beta.2"
tokio = { version = "1", features = ["full"] }
log = { version = "0.4", features = ["max_level_debug"] }
env_logger = "0.8.3"
sun = "0.2"
chrono = "0.4.19"

[package.metadata.raze]
workspace_path = "//cargo"

# This causes aliases for dependencies to be rendered in the BUILD
# file located next to this `Cargo.toml` file.
package_aliases_dir = "cargo"

targets = [
    "x86_64-apple-darwin",
    "x86_64-pc-windows-msvc",
    "x86_64-unknown-linux-gnu",
]

genmode = "Remote"

[package.metadata.raze.crates.ring.'*']
compile_data_attr = "glob([\"**/*.der\"])"

[package.metadata.raze.crates.webpki.'*']
compile_data_attr = "glob([\"**/*.der\"])"
